// task_execution_service/proto/task_execution.proto

syntax = "proto3";

package task_execution;

service TaskExecutionService {
    rpc StartTask(TaskIdRequest) returns (TaskExecutionResponse);
    rpc GetTaskStatus(TaskIdRequest) returns (TaskStatusResponse);
}

message TaskIdRequest {
    int32 taskId = 1;
}

message TaskExecutionResponse {
    int32 taskId = 1;
    string status = 2;
    string result = 3;
}

message TaskStatusResponse {
    int32 taskId = 1;
    string status = 2;
    string result = 3;
}
